# rust-metaprogramming

./: .gitignore
app/: Cargo.toml  Makefile  generated_add_vectors.cu  generated_add_vectors.h  generated_add_vectors.ptx  generated_hello_world_custom_2.cu  generated_hello_world_custom_2.h  generated_hello_world_custom_2_launcher.cu  generated_julia_kernel.cu  generated_julia_kernel.h  generated_julia_kernel.ptx  generated_mm.cu  generated_mm.h  generated_mm.ptx  generated_mm_launcher.cu  generated_raytracing.ptx  generated_ripple_kernel.ptx  matrix_add_kernel.cu  runtime_generatd  runtime_generated  runtime_generated.c
app/src/: dynamic.c  dynamic.cu  dynamic_from_proc_macro.cu  dynamic_lib.rs  examples.rs  main.rs  mult_k.rs  runtime_generatd  runtime_generated  runtime_generated.c  rust_macros.rs  vector_sum_k.rs
guard-rt/: Cargo.toml
guard-rt/src/: lib.rs
knowledge/descend/: descend-from-oxide.md
knowledge/initial/: DATA_RACE_EXAMPLES.md  DESCEND_ANALYSIS.md  DESCEND_ARCHITECTURE.md  KERNEL_TYPE_ANALYSIS.md  PROVENANCE_EXPLAINED.md  TYPE_SYSTEM_EXPLAINED.md
knowledge/oxide/: OXIDE_ANALYSIS.md  flow-typing-oxide.md  frame-oxide.md  loan-oxide.md  outlives-oxide.md  ownership-oxide.md  ownership-safety-oxide.md  place-oxide.md  region-oxide.md  types-oxide.md
lib/: Cargo.toml
lib/src/: cuda_module.rs  devide_function.rs  gen_kernel.rs  gen_kernel_header.rs  gen_launcher.rs  helpers.rs  kernel.rs  lib.rs  spawn.rs
lib_core/: Cargo.toml  build.rs
lib_core/src/: cuda_vec.rs  ffi.rs  kernel.rs  launch.rs  lib.rs
type_checker/: Cargo.toml
(+22 files in other folders)
