[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
guard-rt = { path = "../guard-rt" }
lib_core = { path = "../lib_core" }
type_checker = { path = "../type_checker" }
proc-macro2 = "1.0.95"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
libloading = "0.7"
darling = "0.23.0"
once_cell = "1.18"
cudarc = { version = "0.19.3", features = ["cuda-version-from-build-system"] }

[lib]
proc-macro = true
